--- a/.github/workflows/LemonadeKernel.yml
+++ b/.github/workflows/LemonadeKernel.yml
@@ -27,10 +27,27 @@ jobs:
       - name: Build
         run: ./build.sh
 
-      - name: Upload to Telegram
-        uses: appleboy/telegram-action@master
+      - name: Compress Artifact
+        run: zip -r Lemonade-a505f.zip <path_to_your_artifact>
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          to: ${{ secrets.TELEGRAM_CHAT2_ID }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          document: Lemonade-a505f-*.zip
-          message: "New Lemonade Kernel Update! Download Now!!"
+          tag_name: v1.0.0 # Set your desired tag name
+          release_name: Release v1.0.0 # Set your desired release name
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./Lemonade-a505f.zip # Path to your artifact
+          asset_name: Lemonade-a505f.zip # Name of your artifact
+          asset_content_type: application/zip
